--- a/style.css
+++ b/style.css
@@ -29,17 +29,26 @@ body {
   position: relative;
 }
 
-.profile-card::before {
+/* first image */
+.before {
   content: "";
   position: absolute;
   top: 0;
   left: 0;
-  height: 36%;
+  height: 55%;
   width: 100%;
   border-radius: 24px 24px 0 0;
-  background-color: #4070f4;
 }
 
+.before .profile-img {
+height: 100%;
+width: 100%;
+object-fit: cover;
+border-radius: 50%;
+border: 3px solid #fff;
+}
+
+/* second image */
 .image {
   position: relative;
   height: 150px;
