--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ border: 3px solid #fff;
   height: 100px;
   width: 100px;
   border-radius: 50%;
-  background-color: #4070f4;
+  background-color: #1f7206;
   padding: 3px;
   margin-bottom: 10px;
 }
@@ -144,13 +144,13 @@ border: 3px solid #fff;
 .buttons .button:hover {
   background-color: #0e4bf1;
 }
-
+/*
 .profile-card .analytics {
   display: flex;
   align-items: center;
   margin-top: 25px;
 }
-
+*/
 .analytics .data {
   display: flex;
   align-items: center;
