--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
   position: relative;
 }
 
-/* first image */
+/* background image */
 .before {
   content: "";
   position: absolute;
@@ -48,7 +48,7 @@ border-radius: 50%;
 border: 3px solid #fff;
 }
 
-/* second image */
+/* Profile Image */
 .image {
   position: relative;
   height: 100px;
@@ -66,24 +66,6 @@ border: 3px solid #fff;
   border-radius: 50%;
   border: 3px solid #fff;
 }
-/*
-.profile-img {
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-  border-radius: 50%;
-  border: 3px solid #fff;
-  transform: rotate(180deg); 
-}
-
-.image .profile-img {
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-  border-radius: 50%;
-  border: 3px solid #fff;
-  transform: scaleX(-1); 
-}*/
 
 .profile-card .text-data {
   display: flex;
@@ -144,13 +126,7 @@ border: 3px solid #fff;
 .buttons .button:hover {
   background-color: #0e4bf1;
 }
-/*
-.profile-card .analytics {
-  display: flex;
-  align-items: center;
-  margin-top: 25px;
-}
-*/
+
 .analytics .data {
   display: flex;
   align-items: center;
