--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ border: 3px solid #fff;
 .buttons .button:hover {
   background-color: #0e4bf1;
 }
-
+/*
 .analytics .data {
   display: flex;
   align-items: center;
@@ -134,7 +134,7 @@ border: 3px solid #fff;
   padding: 0 20px;
   border-right: 2px solid #e7e7e7;
 }
-
+*/
 .data i {
   font-size: 18px;
   margin-right: 6px;
